--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@types/express": "^4.17.5",
+    "@types/express": "^4.17.8",
     "@types/jest": "^25.2.1",
     "@types/supertest": "^2.0.8",
     "@types/uuid": "^8.3.0",
@@ -29,6 +29,8 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/cors": "^2.8.8",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "uuid": "^8.3.0"
   }
